--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,9 @@ dependencies:
     sdk: flutter
   intl: ^0.19.0
   provider: ^6.1.2
+  http: ^1.2.1
+  shared_preferences: ^2.2.3
+  image_picker: ^1.1.1
   
 
 
@@ -49,7 +52,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
-  shared_preferences: ^2.2.3
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
