added internet connectivity check

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   http: ^1.2.1
   shared_preferences: ^2.2.3
   image_picker: ^1.1.1
+  connectivity_plus: ^5.0.2
+  get: ^4.6.6
   
 
 
